tweaks for release

--- a/sec2/Makefile
+++ b/sec2/Makefile
@@ -1,10 +1,12 @@
 
 
-CFLAGS = -fsanitize=address -ggdb3
+CFLAGS = -fsanitize=address -ggdb3 
 
-BINS = mem_error1 mem_error2 string_array
+BINS = mem_error1 mem_error2 string_array warmup
 
-.PHONY = clean
+.PHONY = clean all
+
+all: mem_error1 mem_error2 string_array warmup
 
 mem_error1: mem_error1.c
 	gcc $(CFLAGS) -o $@ $?
@@ -13,6 +15,9 @@ mem_error2: mem_error2.c
 	gcc $(CFLAGS) -o $@ $?
 
 string_array: string_array.c
+	gcc $(CFLAGS) -o $@ $?
+
+warmup: warmup.c
 	gcc $(CFLAGS) -o $@ $?
 
 clean:
