add example program

--- a/sec3/Makefile
+++ b/sec3/Makefile
@@ -5,7 +5,12 @@ CFLAGS := -O0 -g -std=c99 -Wall -Werror
 
 .PHONY: all clean
 
-all: stack1 stack2 stack3 stack4
+all: stack1 stack2 stack3 stack4 example
+
+example: example.c
+	$(CC) $(CFLAGS) -o $@ $^
+	# @ x86_64-linux-gnu-objdump -d $@ > asm_ex.txt
+	@ objdump -d $@ > asm_ex.txt
 
 stack1: stack1.c
 	$(CC) $(CFLAGS) -o $@ $^
@@ -28,4 +33,4 @@ stack4: stack4.c
 	@ objdump -d $@ > asm4.txt
 
 clean:
-	rm -rf stack1 stack2 stack3 stack4 asm1.txt asm2.txt asm3.txt asm4.txt
+	rm -rf stack1 stack2 stack3 stack4 example asm1.txt asm2.txt asm3.txt asm4.txt asm_ex.txt
